--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 project(lisp)
 
 add_compile_options()
-SET( CMAKE_CXX_FLAGS  "-g -Wall -pedantic -O0")
+SET( CMAKE_CXX_FLAGS  "-g -O0 -Wall -pedantic")
 
 include_directories(include src)
 
@@ -11,7 +11,6 @@ set(SOURCES
         include/repl.h
         src/lisp.c
         src/repl.c
-        src/main.c
-        )
+        src/main.c)
 
 add_executable(lisp ${SOURCES})
