Lisp runner skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,12 @@ set(SOURCES
         include/repl.h
         include/environment.h
         include/parser.h
+        include/run_lisp.h
         src/lisp.c
         src/repl.c
         src/environment.c
         src/parser.c
+        src/run_lisp.c
         src/main.c)
 
 add_executable(lisp ${SOURCES})
