--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,25 +21,26 @@ set(SOURCES
         src/run_lisp.c
         src/evaluator.c
         src/list.c
-
         src/main.c)
 
-add_executable(lisp.o ${SOURCES})
+add_executable(lisp ${SOURCES})
 
 include_directories(test)
 set(TEST_SOURCES
         include/lisp.h
         include/repl.h
         include/environment.h
+        include/evaluator.h
         include/parser.h
         include/run_lisp.h
         include/list.h
         src/lisp.c
         src/repl.c
         src/environment.c
+        src/evaluator.c
         src/parser.c
         src/run_lisp.c
         src/list.c
         test/test.c)
 
-add_executable(test.o ${TEST_SOURCES})
+add_executable(test ${TEST_SOURCES})
