--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,40 +9,26 @@ SET(CMAKE_CXX_FLAGS  "-g -O0 -Wall -Wextra -pedantic")
 include_directories(include src)
 
 set(SOURCES
-        include/lisp.h
-        include/repl.h
-        include/environment.h
-        include/parser.h
-        include/run_lisp.h
-        include/list.h
-        include/evaluator.h
-        src/lisp.c
-        src/repl.c
-        src/environment.c
-        src/parser.c
-        src/run_lisp.c
-        src/evaluator.c
-        src/list.c
+        include/primitives.h        src/primitives.c
+        include/repl.h              src/repl.c
+        include/environment.h       src/environment.c
+        include/parser.h            src/parser.c
+        include/run_lisp.h          src/run_lisp.c
+        include/list.h              src/evaluator.c
+        include/evaluator.h         src/list.c
         src/main.c)
 
 add_executable(lisp ${SOURCES})
 
 include_directories(test)
 set(TEST_SOURCES
-        include/lisp.h
-        include/repl.h
-        include/environment.h
-        include/evaluator.h
-        include/parser.h
-        include/run_lisp.h
-        include/list.h
-        src/lisp.c
-        src/repl.c
-        src/environment.c
-        src/evaluator.c
-        src/parser.c
-        src/run_lisp.c
-        src/list.c
+        include/primitives.h        src/primitives.c
+        include/repl.h              src/repl.c
+        include/environment.h       src/environment.c
+        include/parser.h            src/parser.c
+        include/run_lisp.h          src/run_lisp.c
+        include/list.h              src/evaluator.c
+        include/evaluator.h         src/list.c
         test/test.c)
 
 add_executable(test_lisp ${TEST_SOURCES})
