--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required
 cmake_minimum_required(VERSION 2.6)
 project(Lisp)
 
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
+
+find_package(Libedit REQUIRED)
+
 # cmake -DCMAKE_BUILD_TYPE=Release
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "Mode: Release")
@@ -11,9 +15,9 @@ else()
     set(CMAKE_CXX_FLAGS  "-g -O0 -Wall -Wextra -pedantic -asni")
 endif()
 
-include_directories(include src)
 
-set(SOURCES
+include_directories(include src test)
+set(COMMON_SRC
         include/primitives.h        src/primitives.c
         include/repl.h              src/repl.c
         include/environment.h       src/environment.c
@@ -21,21 +25,12 @@ set(SOURCES
         include/run-lisp.h src/run-lisp.c
         include/list.h              src/evaluator.c
         include/evaluator.h         src/list.c
-        include/cvector.h           src/cvector.c
-        src/main.c)
+        include/cvector.h           src/cvector.c)
 
-add_executable(lisp ${SOURCES})
+set(LISP_SRC ${COMMON_SRC} src/main.c)
+add_executable(lisp ${LISP_SRC})
+target_link_libraries(lisp ${LIBEDIT_LIBRARIES})
 
-include_directories(test)
-set(TEST_SOURCES
-        include/primitives.h        src/primitives.c
-        include/repl.h              src/repl.c
-        include/environment.h       src/environment.c
-        include/parser.h            src/parser.c
-        include/run-lisp.h src/run-lisp.c
-        include/list.h              src/evaluator.c
-        include/evaluator.h         src/list.c
-        include/cvector.h           src/cvector.c
-        test/test.c)
-
-add_executable(test-lisp ${TEST_SOURCES})
+set(TEST_SRC ${COMMON_SRC} test/test.c)
+add_executable(test-lisp ${TEST_SRC})
+target_link_libraries(test-lisp ${LIBEDIT_LIBRARIES})
