Trying to get things to work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,16 @@ set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required
 cmake_minimum_required(VERSION 2.6)
 project(Lisp)
 
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
-
-find_package(Libedit REQUIRED)
+ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+ find_package(Libedit REQUIRED)
 
 # cmake -DCMAKE_BUILD_TYPE=Release
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "Mode: Release")
-    set(CMAKE_CXX_FLAGS  "-Ofast")
+    set(CMAKE_CXX_FLAGS  "-Ofast -ledit")
 else()
     message(STATUS "Mode: Debug")
-    set(CMAKE_CXX_FLAGS  "-g -O0 -Wall -Wextra -pedantic -asni")
+    set(CMAKE_CXX_FLAGS  "-g -O0 -Wall -Wextra -pedantic -asni -ledit")
 endif()
 
 include_directories(include src test)
@@ -21,7 +20,7 @@ set(COMMON_SRC
         include/repl.h              src/repl.c
         include/environment.h       src/environment.c
         include/parser.h            src/parser.c
-        include/run-lisp.h src/run-lisp.c
+        include/run-lisp.h          src/run-lisp.c
         include/list.h              src/evaluator.c
         include/evaluator.h         src/list.c
         include/cvector.h           src/cvector.c)
