Got the interactive prompt working better

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ project(Lisp)
 # cmake -DCMAKE_BUILD_TYPE=Release
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "Mode: Release")
-    set(CMAKE_CXX_FLAGS  "-Ofast -ledit")
+    set(CMAKE_C_FLAGS  "-Ofast")
 else()
     message(STATUS "Mode: Debug")
-    set(CMAKE_CXX_FLAGS  "-g -O0 -Wall -Wextra -pedantic -asni -ledit")
+    set(CMAKE_C_FLAGS  "-g -O0 -Wall -Wextra -pedantic")
 endif()
 
 include_directories(include src test)
