Parsing and unparsing doesn't leak memory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ project(Lisp)
 # cmake -DCMAKE_BUILD_TYPE=Release
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "Mode: Release")
-    set(CMAKE_C_FLAGS  "-Ofast -lreadline")
+    set(CMAKE_C_FLAGS  "-Ofast")
 else()
     message(STATUS "Mode: Debug")
-    set(CMAKE_C_FLAGS  "-g -O0 -Wall -Wextra -pedantic -lreadline")
+    set(CMAKE_C_FLAGS  "-g -O0 -Wall -Wextra -pedantic")
 endif()
 
 include_directories(include src test)
@@ -24,6 +24,8 @@ set(COMMON_SRC
 
 set(LISP_SRC ${COMMON_SRC} src/main.c)
 add_executable(lisp ${LISP_SRC})
+target_link_libraries(lisp readline)
 
 set(TEST_SRC ${COMMON_SRC} test/test.c)
 add_executable(test-lisp ${TEST_SRC})
+target_link_libraries(test-lisp readline)
