Added stack trace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ set(COMMON_SRC
         include/list.h              src/evaluator.c
         include/evaluator.h         src/list.c
         include/cvector.h           src/cvector.c
-        include/math.h              src/math.c)
+        include/math.h              src/math.c
+        include/stack-trace.h       src/stack-trace.c)
 
 set(LISP_SRC ${COMMON_SRC} src/main.c)
 add_executable(lisp ${LISP_SRC})
