cleaned up some cmap cod

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,9 @@ set(COMMON_SRC
         include/environment.h       src/environment.c
         include/cvector.h           src/cvector.c
         include/clist.h             src/clist.c
+        include/cmap.h              src/cmap.c
+        include/hash.h              src/hash.c
+        include/murmur3.h           src/murmur3.c
         include/math.h              src/math.c
         include/repl.h              src/repl.c
         include/stack-trace.h       src/stack-trace.c)
