Fixed linking on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ if (gtest)
             test/cmap-test.hpp test/cset-test.hpp)
 
     add_executable(clib-test ${CLIB_SRC} ${CLIB_TEST_SRC})
-    target_link_libraries(clib-test clib gtest)
+    target_link_libraries(clib-test clib gtest pthread)
     target_compile_options(clib-test PUBLIC ${TEST_FLAGS})
 else()
     message("Google Test not found")
